# musomatic-client

./: .gitignore  README.md  install.sh  musomatic.py  pyproject.toml  requirements.txt
musomatic/: __init__.py  cli.py  client.py  tui.py
