[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "musomatic"
version = "1.0.0"
description = "CLI client for musomatic lossless music server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.scripts]
musomatic = "musomatic:cli"

[project.urls]
Repository = "https://github.com/9ckobn/musomatic-client"
