[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musomatic"
version = "2.0.0"
description = "CLI & TUI client for musomatic lossless music server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
    "textual>=0.40",
]

[project.scripts]
musomatic = "musomatic.cli:cli"

[project.urls]
Repository = "https://github.com/9ckobn/musomatic-client"

[tool.setuptools.packages.find]
include = ["musomatic*"]
